--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,5 +22,5 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: npm --version
       - run: npm ci
-      - run: npm run build --if-present
+      - run: npm run build
       - run: npm publish
