--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,12 +7,13 @@ permissions:
   contents: write
   pull-requests: write
 
-name: Create release and publish to npm
+name: Create release
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
+        id: release
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
